# health-attention

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: TAURI_WINDOWS_BUILD_GUIDE.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/assets/styles/: main.css
src/components/: Sidebar.vue
src/router/: index.ts
src/stores/: index.ts  reminder.ts  settings.ts  sit.ts  water.ts
src/types/: index.ts
src/views/: ActivityRecord.vue  Dashboard.vue  Settings.vue  Statistics.vue  WaterRecord.vue
